Change some deprecated method calls